--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,21 +1,14 @@
-buildscript {
-    ext.kotlin_version = '1.3.50'
-    repositories {
-        google()
-        mavenCentral()
-    }
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
+
 
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
+}
+subprojects {
+    project.evaluationDependsOn(':app')
 }
 
 rootProject.buildDir = '../build'
@@ -24,6 +17,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register("clean", Delete) {
+    delete rootProject.layout.buildDirectory
 }
