--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=/home/ishukumar5663/Android/Sdk
 flutter.sdk=/home/ishukumar5663/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
