--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,12 @@ description: My journey to learn flutter.
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: any
-  path_provider: any
-  intl: ^0.16.0
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
+  intl: ^0.19.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -17,7 +20,7 @@ dev_dependencies:
     sdk: flutter
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
