--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,9 @@ android {
         }
     }
     namespace 'notekeeper.notekeeper'
+    buildFeatures{
+        buildConfig = true
+    }
 }
 
 flutter {
